--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 
-BD_CONNECTION_STRING=mongodb+srv://marialalonsog:fuzRftUICTgTxxSf@plat-epa.dqf8aml.mongodb.net/
+BD_CONNECTION_STRING=mongodb+srv://desarrollotic:masVi8IXabvtqyye@plat-epa.r7bzlne.mongodb.net/
+EMAIL_USER= desarrollo.tic@epa.gov.co
+EMAIL_PASS= bxsd qbvz hluj fwpd
