--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ BD_CONNECTION_STRING=mongodb+srv://desarrollotic:masVi8IXabvtqyye@plat-epa.r7bzl
 EMAIL_USER= desarrollo.tic@epa.gov.co
 EMAIL_PASS= bxsd qbvz hluj fwpd
 PORT= 3000
+JWT_SECRET=7/uLr9@pQ1!vA6g$TfXzZc3B%N8sK0eW
